tests/ui/attributes/ignore.stderr
error: `#[ignore]` should only be applied to functions annotated with `#[test]` or `#[bench]`
  --> $DIR/ignore.rs:3:1
   |
LL | #[ignore]
   | ^^^^^^^^^

error: aborting due to 1 previous error

